<resources>
    <string name="app_name">MyReceipts</string>
    <string name="receipt_title_background_text">Enter a title for the receipt.</string>
    <string name="receipt_title_label">Receipt Title:</string>
    <string name="receipt_details_label">Receipt Details:</string>
    <string name="receipt_shop_name">Enter a shop name.</string>
    <string name="receipt_comment">Enter a comment.</string>
    <string name="date_picker_title">Date of receipt:</string>
    <string name="new_receipt">New Receipt</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d receipts</string>
    <string name="receipt_report_subject">MyReceipts Receipt Report</string>
    <string name="send_report">Send receipt report via</string>
    <string name="receipt_report_text">Send Receipt Report</string>
    <string name="receipt_report">
        The receipt titled \'%1$s\' from \'%3$s\' was added to the MyReceipts app on %2$s.
        The information \'%4$s\' was included as a comment.
    </string>
    <string name="delete_receipt_btn">Delete Receipt</string>
    <string name="help_loading">Help Loading</string>
    <string name="show_help">Show Help</string>
    <string name="deletion_warning">Warning: Deleting a receipt is irreversible and cannot be undone</string>
    <string name="back_to_receipts">Back To Receipts</string>
    <string name="photo">Photo</string>
    <string name="photo_button">Photo Button</string>
    <string name="help_the_receipt_title_will_be_shown_on_the_the_list_view_alongside_the_shop_name_and_date_added">Help: The Receipt Title will be shown on the list view alongside the Shop Name and date added.</string>
    <string name="shop">Shop:</string>
    <string name="comments">Comments:</string>
    <string name="date">Date:</string>
</resources>
